# WbLS-SensiAna

./: .gitignore  AnalysisDefinitions.hh  CMakeLists.txt  CreateEResMatrix.cc  CreateEResMatrix.hh  CreatePDF.cc  CreatePDF.hh  CreatePosMatrix  CreatePosMatrix.cc  CreatePosMatrix.hh  Fastn.C  FlattenHits.cc  FlattenHits.hh  Makefile  NMatrix.C  PECounting.cc  PECounting.hh  PMatrix.C  PlotCollectedPE.cc  PlotCollectedPE.hh  PlotPEVSNHits.cc  PlotPEVSNHits.hh  ProfileTResCosT.C  ProgressBar.hpp  README.md  SelectIBD.cc  SelectIBD.hh  SetROOTIncludePath.sh  TResVSCosTheta.C  TemplateAnalysis.cc  TemplateAnalysis.hh  TemplateAnalysisMT.cc  TemplateAnalysisMT.hh  TestMT.ipynb  VtxRecon.cc  VtxRecon.hh  dE.C  env-antinu.sh  env.sh  pyevent.cpp  (+1 more)
include/: Analyzer.hh  AnalyzerFunctions.hh  CalibFunctions.hh  EVFunctions.hh  FitPosTime.hh  FitPosTimeSimulatedAnnealing.hh  FlatParticle.hh  HitClass.hh  HitFunctions.hh  LL.hh  MCFunctions.hh  TFileAnalysis.hh  TParticle.hh  utils.hh
macros/: AverageLength.ipynb  BirksValuePerWbLS.C  ComparePMTQE.C  ComparePMTQE.hh  CreateCalibSplines.C  EffVSCov.C  FlattenHits.C  Neutrons.C  PlotAll.C  PlotCollectedPE.C  PlotERes.C  PlotFitResults.C  PlotIBD.C  PlotQVST.C  PlotTracks.C  PlotTruePos.C  RejectionPower.C  TemplateMacro.C  data.hh
src/: AnalyzerFunctions.cc  CalibFunctions.cc  EVFunctions.cc  HitFunctions.cc  LL.cc  MCFunctions.cc  TParticle.cc
